
  * debian/patches/any/local-dynamic-resolvconf.diff: New file to 
    check for updated resolv.conf before a nameserver call.  (Closes:
    #272265).
  * debian/patches/series: Use it.

 -- Clint Adams <schizo@debian.org>  Sun, 28 May 2006 03:28:14 +0200

glibc (2.3.6.ds1-5) UNRELEASED; urgency=low

  * debian/local/manpages/ldconfig.8: Update the description. Closes: #325921.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 24 Aug 2006 21:04:20 +0200

glibc (2.3.6.ds1-4) unstable; urgency=low

  * debian/control.in/opt: add a new line at the end of the file.  (Closes:
    #384375). 
  * debian/rules.d/control.mk: add a check to make sur that all files in
    debian/control.in have a new line at the end.

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 24 Aug 2006 00:21:25 +0200

glibc (2.3.6.ds1-3) unstable; urgency=low

  * patches/any/cvs-sysctl.diff: patch from upstream to fix the sysctl()
    problem for NPTL.
  * patches/any/local-sysctl.diff: remove the NPTL fix from this patch, apply
    the same kind of fix for linuxthreads than for NPTL.  (Closes: #383976).
  * patches/any/local-sysctl.diff: fix for arm.
  * patches/any/local-bashisms.diff: fix bashisms in the testsuite.
  * debian/control.in/{i386,powerpc,ppc64,s390x,sparc64}: change the bi-arch
    package priority to optional (but keep libc6-i386 on amd64 to standard).
    (Closes: #344253).
  * debian/control.in/opt: Removed the comment about the IBM's JDK in the
    descriptions of the optimized packages, as an NPTL version is also present
    in the main libc.
  * debian/rules.d/build.mk: force the locale directory to /usr/lib/locale.
    This way the 32-bit libc6 on amd64 is able use the locales correctly (it
    was already done for other bi-arch architectures).  (Closes: #379959).

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 23 Aug 2006 00:38:22 +0200

glibc (2.3.6.ds1-2) unstable; urgency=low

  [ Aurelien Jarno ]
  * rules.d/build.mk: removed the call to texi2html.  (Closes: #383276).