@@ -147,6 +147,7 @@ glibc (2.4-1) UNRELEASED; urgency=low
 glibc (2.3.6.ds1-5) UNRELEASED; urgency=low
 
   * debian/local/manpages/ldconfig.8: Update the description. Closes: #325921.
+  * rules.d/debhelper.mk: don't make ld.so.8.gz or ld.so.conf executable.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 24 Aug 2006 21:04:20 +0200
 
